# SQL_emulator

./: CMakeLists.txt  README.md  main.cpp
SQL/: CMakeLists.txt  basic_operations.cpp  fstream_with_exceptions.h  parser.cpp  parser.h  sql.h
SQL/condition/: CMakeLists.txt  condition.cpp  condition.h
SQL/core/: CMakeLists.txt  fstream_with_exceptions.h  sql.h  sql_exception.h
SQL/data/: tEsT  users  users_table
SQL/executing/: CMakeLists.txt  basic_operations.cpp
SQL/helper/: CMakeLists.txt  sql_helper.cpp  sql_helper.h
SQL/output/: basic_operations  parser
SQL/parser/: CMakeLists.txt  parser.cpp  parser.h
SQL/parser/output/: parser
SQL/setup/: CMakeLists.txt  tables_info.cpp
SQL/tables/: xyz
SQL/test/: CMakeLists.txt  test.cpp  test.h
SQL/test/output/: test
output/: main
